# xBerry-Exercise

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: LifeCycle.hpp  Logger.hpp  MainNetworkNode.hpp  Sensor.hpp  SensorMenager.hpp  iLifeCycle.hpp  iLifeCycleMenager.hpp  iLogger.hpp  iMainNetworkListener.hpp  iSensor.hpp  iSensorMenager.hpp  utils.hpp
src/: LifeCycle.cpp  Logger.cpp  MainNetworkNode.cpp  Sensor.cpp  SensorMenager.cpp  iLifeCycle.cpp  iLifeCycleMenager.cpp  iLogger.cpp  iMainNetworkListener.cpp  iSensor.cpp  iSensorMenager.cpp
tests/: run_tests.cpp
